--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Intel: Sustainability Through the Ages</title>
+  <!-- Bootstrap RTL stylesheet for right-to-left text flow -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css"
+  />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -28,7 +33,7 @@
   </header>
 
   <!-- Timeline Cards Section -->
-  <section>
+  <section class="timeline">
 
     <!-- Card 1: 1968 -->
     <div>
@@ -138,6 +143,200 @@
       </p>
     </div>
   </section>
-  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+
+  <!-- New Bootstrap Grid Section -->
+  <section class="container my-5 info-grid">
+    <!-- Row that holds three responsive columns -->
+    <div class="row text-center">
+      <!-- Column 1 -->
+      <div class="col-12 col-md-4 mb-4">
+        <div class="info-card">
+          <div class="info-icon" aria-hidden="true">⚡</div>
+          <h3>Energy</h3>
+        <p>
+          Learn how Intel reduces energy use through smarter chip design and
+          more efficient manufacturing.
+        </p>
+          <a class="info-link" href="#">Learn more</a>
+        </div>
+      </div>
+
+      <!-- Column 2 -->
+      <div class="col-12 col-md-4 mb-4">
+        <div class="info-card">
+          <div class="info-icon" aria-hidden="true">💧</div>
+          <h3>Water</h3>
+        <p>
+          Discover water-saving programs that protect local resources and keep
+          factories sustainable.
+        </p>
+          <a class="info-link" href="#">Learn more</a>
+        </div>
+      </div>
+
+      <!-- Column 3 -->
+      <div class="col-12 col-md-4 mb-4">
+        <div class="info-card">
+          <div class="info-icon" aria-hidden="true">♻️</div>
+          <h3>Waste</h3>
+        <p>
+          See how recycling and reuse help reduce waste across Intel’s global
+          operations.
+        </p>
+          <a class="info-link" href="#">Learn more</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Bootstrap Accordion Section -->
+  <section class="container my-5">
+    <h2 class="text-center mb-4">Sustainability FAQ</h2>
+    <div class="accordion" id="sustainabilityAccordion">
+      <!-- Accordion Item 1 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button
+            class="accordion-button"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseOne"
+            aria-expanded="true"
+            aria-controls="collapseOne"
+          >
+            What is the RISE strategy?
+          </button>
+        </h2>
+        <div
+          id="collapseOne"
+          class="accordion-collapse collapse show"
+          aria-labelledby="headingOne"
+          data-bs-parent="#sustainabilityAccordion"
+        >
+          <div class="accordion-body">
+            RISE stands for Responsible, Inclusive, Sustainable, Enabling. It
+            guides Intel’s goals for climate action, water, and waste reduction.
+          </div>
+        </div>
+      </div>
+
+      <!-- Accordion Item 2 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseTwo"
+            aria-expanded="false"
+            aria-controls="collapseTwo"
+          >
+            How does Intel reduce greenhouse gases?
+          </button>
+        </h2>
+        <div
+          id="collapseTwo"
+          class="accordion-collapse collapse"
+          aria-labelledby="headingTwo"
+          data-bs-parent="#sustainabilityAccordion"
+        >
+          <div class="accordion-body">
+            Intel invests in renewable energy, chemical abatement, and more
+            efficient manufacturing to reduce emissions across operations.
+          </div>
+        </div>
+      </div>
+
+      <!-- Accordion Item 3 -->
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button
+            class="accordion-button collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapseThree"
+            aria-expanded="false"
+            aria-controls="collapseThree"
+          >
+            What is Intel’s net-zero goal?
+          </button>
+        </h2>
+        <div
+          id="collapseThree"
+          class="accordion-collapse collapse"
+          aria-labelledby="headingThree"
+          data-bs-parent="#sustainabilityAccordion"
+        >
+          <div class="accordion-body">
+            Intel aims to reach net-zero greenhouse gas emissions (Scope 1 and 2)
+            across global operations by 2040.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Subscription Section -->
+  <section class="container my-5 subscribe-section">
+    <div class="subscribe-card">
+      <h2>Stay Updated</h2>
+      <p>
+        Get the latest sustainability news and milestones delivered to your inbox.
+      </p>
+      <form class="subscribe-form" action="#" method="post">
+        <label for="email">Email address</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          autocomplete="email"
+          inputmode="email"
+          placeholder="you@example.com"
+          aria-describedby="email-help"
+          required
+        />
+        <p id="email-help">We only use your email for updates. No spam.</p>
+        <button type="submit">Subscribe</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Simple Footer -->
+  <footer class="site-footer">
+    <p>Scroll to view timeline | Hover over cards to learn more!</p>
+    <small>© 2026 Intel Sustainability Timeline</small>
+  </footer>
+
+  <!-- Bootstrap JS bundle for interactive components -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  ></script>
+
+  <!-- RTL language detector for dynamic direction changes -->
+  <script>
+    (function () {
+      var rtlLangs = ['ar', 'he', 'fa', 'ur'];
+      var root = document.documentElement;
+
+      function applyDirection() {
+        var lang = (root.getAttribute('lang') || '').toLowerCase();
+        var baseLang = lang.split('-')[0];
+        var isRtl = rtlLangs.indexOf(baseLang) !== -1;
+        root.setAttribute('dir', isRtl ? 'rtl' : 'ltr');
+      }
+
+      applyDirection();
+
+      var observer = new MutationObserver(function (mutations) {
+        mutations.forEach(function (mutation) {
+          if (mutation.attributeName === 'lang') {
+            applyDirection();
+          }
+        });
+      });
+
+      observer.observe(root, { attributes: true });
+    })();
+  </script>
 </body>
 </html>
